--- a/assets/styles/styles-day.css
+++ b/assets/styles/styles-day.css
@@ -20,6 +20,10 @@ body[data-theme='light'] {
     color: #8f8a9b;
 }
 
+[data-theme='light'] .guifos a {
+    color: #110038;
+}
+
 [data-theme='light'] .bar {
     background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
 }
@@ -76,18 +80,18 @@ body[data-theme='light'] {
     box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[data-theme='light'] nav ul {
+[data-theme='light'] #theme {
     background-color: #E6E6E6;
     box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
-[data-theme='light'] nav li {
+[data-theme='light'] #theme span {
     background: #F0F0F0;
     border: 1px solid #808080;
     box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-[data-theme='light'] nav li.selected {
+[data-theme='light'] #theme span.selected {
     background-color: #FFF4FD;
     border: 1px solid #CCA6C9;
     box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
